<resources>
    <string name="app_name">Chat App</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="conform_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
</resources>